[package]
name = "thunder-portal"
version = "0.1.0"
edition = "2021"

[lib]
name = "thunder_portal"
path = "src/lib.rs"

[[bin]]
name = "thunder-portal"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.6"

# Bitcoin
bitcoin = { version = "0.31", features = ["serde", "rand"] }
secp256k1 = { version = "0.28", features = ["rand", "global-context"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }

# Utilities
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
once_cell = "1.19"
regex = "1.10"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
actix-rt = "2"
mockito = "1.2"